# sample-app

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  webpack.config.js
migrations/2022-03-24-153417_create_todos/: up.sql
src/: db.rs  error_handler.rs  main.rs  schema.rs  todos.rs
src/todos/: model.rs  routes.rs  todos_scope.rs
static/css/: index.css
static/js/: client.js
static/js/components/: Form.js  Form.tsx  Layout.js  Layout.tsx  Todos.js  Todos.tsx
static/js/components/Todos/: Todo.js  Todo.tsx
static/js/components/Todos/Todo/: DeleteBtn.js  DeleteBtn.tsx  DoneBtn.js  DoneBtn.tsx  Edit.js  Edit.tsx  EditBtn.js  EditBtn.tsx
static/js/components/Todos/Todo/Edit/: CloseBtn.js  CloseBtn.tsx  EditForm.js  EditForm.tsx
templates/: base.html  edit.html  index.html
