[package]
name = "sample-app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0.1"
actix-rt = "1.1.1"
listenfd = "0.3"
dotenv = "0.11"
env_logger = "0.7.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "1.4", features = ["mysql", "r2d2", "uuid", "chrono"] }
diesel_migrations = "1.4"
r2d2 = "0.8"
lazy_static = "1.4"
thiserror = "1.0.30"
tera = "1.15.0"
